<resources>
    <string name="app_name">KnowsIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_mytask">My schedule</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_header">Please login</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectuer. Lorem ipsum dolor sit amet consectuer. Lorem ipsum dolor sit amet consectuer. Lorem ipsum dolor sit amet consectuer</string>
    <string name="nim">Enter your nim</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
</resources>
